[package]
name = "chess_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yea_fen = {git = "https://github.com/mendelsshop/yea_fen.git", rev = "48634418328861b6eec9202a854ed7057655be93"}
# yea_fen = {path = "../yea_fen" }
eframe = {version = "0.20.1",default_features = false, features = ["dark-light", "glow", "default_fonts"]}
egui_extras = {version = "0.20", features = ["image"]}
image = { version = "0.24.5", default-features = false, features = ["png"] }
# iced = "0.6.0"
# druid = "0.7.0"